...
}
+ (NSString *)VALID_CARD_ERROR_LABEL {
    return NSLocalizedStringWithDefaultValue(@"VALID_CARD_ERROR_LABEL", [self localizationTable], [self localizationBundle], @"You must provide a valid Card Number.", @"VALID_CARD_ERROR_LABEL");
}
+ (NSString *)CARD_REQUIRED {
...

+ (NSString *)CANCEL_ACTION {
    return NSLocalizedStringWithDefaultValue(@"CANCEL_ACTION", [self localizationTable], [self localizationBundle], @"Cancel", @"CANCEL_ACTION");
}

...

+ (NSString *)ADD_CARD_ACTION {
    return NSLocalizedStringWithDefaultValue(@"ADD_CARD_ACTION", [self localizationTable], [self localizationBundle], @"Add Card", @"ADD_CARD_ACTION");
}

...

+ (NSString *)TOP_LEVEL_ERROR_ALERT_VIEW_OK_BUTTON_TEXT {
    return NSLocalizedStringWithDefaultValue(@"TOP_LEVEL_ERROR_ALERT_VIEW_OK_BUTTON_TEXT", [self localizationTable], [self localizationBundle], @"OK", @"TOP_LEVEL_ERROR_ALERT_VIEW_OK_BUTTON_TEXT");
}

...

+ (NSString *)REVIEW_AND_TRY_AGAIN {
    return NSLocalizedStringWithDefaultValue(@"REVIEW_AND_TRY_AGAIN", [self localizationTable], [self localizationBundle], @"Please review your information and try again.", @"REVIEW_AND_TRY_AGAIN");
}

...

+ (NSString *)CREDIT_OR_DEBIT_CARD_LABEL {
    return NSLocalizedStringWithDefaultValue(@"CREDIT_OR_DEBIT_CARD_LABEL", [self localizationTable], [self localizationBundle], @"Credit or Debit Card", @"CREDIT_OR_DEBIT_CARD_LABEL");
}

...

+ (NSString *)CVV_FIELD_PLACEHOLDER {
    return NSLocalizedStringWithDefaultValue(@"CVV_FIELD_PLACEHOLDER", [self localizationTable], [self localizationBundle], @"CVV", @"CVV_FIELD_PLACEHOLDER");
}

...

+ (NSString *)POSTAL_CODE_PLACEHOLDER {
    return NSLocalizedStringWithDefaultValue(@"POSTAL_CODE_PLACEHOLDER", [self localizationTable], [self localizationBundle], @"Postal Code", @"POSTAL_CODE_PLACEHOLDER");
}

...

+ (NSString *)CARD_NUMBER_PLACEHOLDER {
    return NSLocalizedStringWithDefaultValue(@"CARD_NUMBER_PLACEHOLDER", [self localizationTable], [self localizationBundle], @"Card Number", @"CARD_NUMBER_PLACEHOLDER");
}

...

+ (NSString *)CARDHOLDER_NAME_LABEL {
    return NSLocalizedStringWithDefaultValue(@"CARDHOLDER_NAME_LABEL", [self localizationTable], [self localizationBundle], @"Cardholder Name", @"CARDHOLDER_NAME_LABEL");
}

+ (NSString *)STREET_ADDRESS_LABEL {
    return NSLocalizedStringWithDefaultValue(@"STREET_ADDRESS_LABEL", [self localizationTable], [self localizationBundle], @"Street Address", @"STREET_ADDRESS_LABEL");
}

+ (NSString *)EXTENDED_ADDRESS_LABEL {
    return NSLocalizedStringWithDefaultValue(@"EXTENDED_ADDRESS_LABEL", [self localizationTable], [self localizationBundle], @"Extended Address", @"EXTENDED_ADDRESS_LABEL");
}

+ (NSString *)LOCALITY_LABEL {
    return NSLocalizedStringWithDefaultValue(@"LOCALITY_LABEL", [self localizationTable], [self localizationBundle], @"City", @"LOCALITY_LABEL");
}

+ (NSString *)REGION_LABEL {
    return NSLocalizedStringWithDefaultValue(@"REGION_LABEL", [self localizationTable], [self localizationBundle], @"State", @"REGION_LABEL");
}

+ (NSString *)COUNTRY_CODE_LABEL {
    return NSLocalizedStringWithDefaultValue(@"COUNTRY_CODE_LABEL", [self localizationTable], [self localizationBundle], @"Country", @"COUNTRY_CODE_LABEL");
}

...

+ (NSString *)PAYPAL {
    return NSLocalizedStringWithDefaultValue(@"PAYPAL", [self localizationTable], [self localizationBundle], @"PayPal", @"PAYPAL");
}

...

+ (NSString *)BRANDING_APPLE_PAY {
    return NSLocalizedStringWithDefaultValue(@"BRANDING_APPLE_PAY", [self localizationTable], [self localizationBundle], @"Apple Pay", @"BRANDING_APPLE_PAY");
}

...
