/*
 IMPORTANT
 Hardware keyboard should be disabled on simulator for tests to run reliably.
 */

import XCTest

class BraintreeDropIn_TokenizationKey_CardForm_UITests: XCTestCase {
    
    var app: XCUIApplication!
    
    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-ThreeDSecureDefault")
        app.launch()
        sleep(1)
        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()
    }
    
    func testDropIn_dismissesWhenCancelled() {
        self.waitForElementToBeHittable(app.buttons["Cancel"])
        app.buttons["Cancel"].forceTapElement()
        XCTAssertTrue(app.buttons["Cancelled🎲"].exists);
    }
    
    func testDropIn_displaysPaymentOptions_applePay_card_payPal() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        sleep(1)
        XCTAssertTrue(app.staticTexts["Credit or Debit Card"].exists);
        XCTAssertTrue(app.staticTexts["PayPal"].exists);
        XCTAssertTrue(app.staticTexts["Apple Pay"].exists);
    }
    
    func testDropIn_cardInput_receivesNonce() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()
        
        let elementsQuery = app.scrollViews.otherElements
        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")
        
        self.waitForElementToBeHittable(app.staticTexts[Date.getNextYear()])
        app.staticTexts["11"].forceTapElement()
        app.staticTexts[Date.getNextYear()].forceTapElement()
        
        let securityCodeField = elementsQuery.textFields["CVV"]
        self.waitForElementToBeHittable(securityCodeField)
        securityCodeField.forceTapElement()
        securityCodeField.typeText("123")
        
        let postalCodeField = elementsQuery.textFields["12345"]
        self.waitForElementToBeHittable(postalCodeField)
        postalCodeField.forceTapElement()
        postalCodeField.typeText("12345")
        
        app.buttons["Add Card"].forceTapElement()
        
        self.waitForElementToAppear(app.staticTexts["ending in 11"])
        
        XCTAssertTrue(app.staticTexts["ending in 11"].exists);
    }
    
    func testDropIn_cardInput_showsInvalidState_withInvalidCardNumber() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()
        
        let elementsQuery = app.scrollViews.otherElements
        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4141414141414141")
        
        self.waitForElementToAppear(elementsQuery.staticTexts["You must provide a valid Card Number."])
    }
    
    func testDropIn_cardInput_hidesInvalidCardNumberState_withDeletion() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()
        
        let elementsQuery = app.scrollViews.otherElements
        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4141414141414141")
        
        self.waitForElementToAppear(elementsQuery.staticTexts["You must provide a valid Card Number."])
        
        cardNumberTextField.typeText("\u{8}")
        
        XCTAssertFalse(elementsQuery.textFields["Invalid: Card Number"].exists);
    }
}

class BraintreeDropIn_securityCodeValidation_CardForm_UITests: XCTestCase {

    var app: XCUIApplication!

    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-ThreeDSecureDefault")
        // NOTE: This sandbox client token has CVV validation enabled.
        app.launchArguments.append("-Authorization:eyJ2ZXJzaW9uIjoyLCJhdXRob3JpemF0aW9uRmluZ2VycHJpbnQiOiI2ZGE5Y2VhMzVkNGNlMjkxNGI3YzBiOGRiN2M5OWU4MjVmYTQ5ZTY5OTNiYWM4YmE3MTQwYjdiZjI0ODc4NGQ0fGNyZWF0ZWRfYXQ9MjAxOC0wMy0xMlQyMTo0MzoxMS4wOTI1MzAxNDcrMDAwMCZjdXN0b21lcl9pZD01ODA3NDE3NzEmbWVyY2hhbnRfaWQ9aGg0Y3BjMzl6cTRyZ2pjZyZwdWJsaWNfa2V5PXEzanRzcTNkM3Aycmg1dnQiLCJjb25maWdVcmwiOiJodHRwczovL2FwaS5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tOjQ0My9tZXJjaGFudHMvaGg0Y3BjMzl6cTRyZ2pjZy9jbGllbnRfYXBpL3YxL2NvbmZpZ3VyYXRpb24iLCJncmFwaFFMVXJsIjoiaHR0cHM6Ly9wYXltZW50cy5zYW5kYm94LmJyYWludHJlZS1hcGkuY29tL2dyYXBocWwiLCJjaGFsbGVuZ2VzIjpbImN2diJdLCJlbnZpcm9ubWVudCI6InNhbmRib3giLCJjbGllbnRBcGlVcmwiOiJodHRwczovL2FwaS5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tOjQ0My9tZXJjaGFudHMvaGg0Y3BjMzl6cTRyZ2pjZy9jbGllbnRfYXBpIiwiYXNzZXRzVXJsIjoiaHR0cHM6Ly9hc3NldHMuYnJhaW50cmVlZ2F0ZXdheS5jb20iLCJhdXRoVXJsIjoiaHR0cHM6Ly9hdXRoLnZlbm1vLnNhbmRib3guYnJhaW50cmVlZ2F0ZXdheS5jb20iLCJhbmFseXRpY3MiOnsidXJsIjoiaHR0cHM6Ly9jbGllbnQtYW5hbHl0aWNzLnNhbmRib3guYnJhaW50cmVlZ2F0ZXdheS5jb20vaGg0Y3BjMzl6cTRyZ2pjZyJ9LCJ0aHJlZURTZWN1cmVFbmFibGVkIjp0cnVlLCJwYXlwYWxFbmFibGVkIjp0cnVlLCJwYXlwYWwiOnsiZGlzcGxheU5hbWUiOiJidCIsImNsaWVudElkIjoiQVZRSmY5YS1iNmptWUZnaW9OcEkyaTU3cnNRa0hqUlpadjRkOURaTFRVMG5CU3Vma2h3QUNBWnhqMGxkdTg1amFzTTAyakZSUEthVElOQ04iLCJwcml2YWN5VXJsIjoiaHR0cDovL2V4YW1wbGUuY29tL3BwIiwidXNlckFncmVlbWVudFVybCI6Imh0dHA6Ly9leGFtcGxlLmNvbS90b3MiLCJiYXNlVXJsIjoiaHR0cHM6Ly9hc3NldHMuYnJhaW50cmVlZ2F0ZXdheS5jb20iLCJhc3NldHNVcmwiOiJodHRwczovL2NoZWNrb3V0LnBheXBhbC5jb20iLCJkaXJlY3RCYXNlVXJsIjpudWxsLCJhbGxvd0h0dHAiOnRydWUsImVudmlyb25tZW50Tm9OZXR3b3JrIjpmYWxzZSwiZW52aXJvbm1lbnQiOiJvZmZsaW5lIiwidW52ZXR0ZWRNZXJjaGFudCI6ZmFsc2UsImJyYWludHJlZUNsaWVudElkIjoibWFzdGVyY2xpZW50MyIsImJpbGxpbmdBZ3JlZW1lbnRzRW5hYmxlZCI6dHJ1ZSwibWVyY2hhbnRBY2NvdW50SWQiOiJjNXljdzJzdnlrbnp3anR6IiwiY3VycmVuY3lJc29Db2RlIjoiVVNEIn0sIm1lcmNoYW50SWQiOiJoaDRjcGMzOXpxNHJnamNnIiwidmVubW8iOiJvZmYiLCJicmFpbnRyZWVfYXBpIjp7InVybCI6Imh0dHBzOi8vcGF5bWVudHMuc2FuZGJveC5icmFpbnRyZWUtYXBpLmNvbSIsImFjY2Vzc190b2tlbiI6InNhbmRib3hfNmRkdG13X3B6YjZ3cF93ZHdoY3lfOWhnNm5iX2N5NiJ9fQ==")
        app.launch()
        sleep(1)
        self.waitForElementToBeHittable(app.buttons["Change Payment Method"])
        app.buttons["Change Payment Method"].tap()
    }

    func testDropIn_invalidSecurityCode_presentsAlert() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()

        let elementsQuery = app.scrollViews.otherElements
        let cardNumberTextField = elementsQuery.textFields["Card Number"]

        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4000000000000002")

        self.waitForElementToBeHittable(app.staticTexts[Date.getNextYear()])
        app.staticTexts["11"].forceTapElement()
        app.staticTexts[Date.getNextYear()].forceTapElement()

        let securityCodeField = elementsQuery.textFields["CVV"]
        self.waitForElementToBeHittable(securityCodeField)
        securityCodeField.forceTapElement()
        securityCodeField.typeText("200")

        app.buttons["Add Card"].forceTapElement()

        self.waitForElementToBeHittable(app.alerts.buttons["OK"])
        XCTAssertTrue(app.alerts.staticTexts["Please review your information and try again."].exists);
        app.alerts.buttons["OK"].tap()

        // Assert: can edit after dismissing alert
        self.waitForElementToBeHittable(securityCodeField)
        securityCodeField.forceTapElement()
        securityCodeField.typeText("\u{8}1")
    }
}

class BraintreeDropIn_CardDisabled_UITests: XCTestCase {

    var app: XCUIApplication!

    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-CardDisabled")
        app.launch()
        sleep(1)
        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()
    }

    func testDropIn_cardDisabledOption_disablesCreditCard() {
        XCTAssertTrue(app.staticTexts["PayPal"].exists);
        XCTAssertFalse(app.staticTexts["Credit or Debit Card"].exists);
    }
}

class BraintreeDropIn_CardForm_RequestOptions_UITests: XCTestCase {

    var app: XCUIApplication!

    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-ThreeDSecureDefault")
        app.launchArguments.append("-MaskSecurityCode")
        app.launch()
        sleep(1)
        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()
    }

    func testDropIn_maskSecurityCodeOption_enablesSecureTextEntry() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()

        let elementsQuery = app.scrollViews.otherElements
        let cardNumberTextField = elementsQuery.textFields["Card Number"]

        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        let securityCodeField = elementsQuery.secureTextFields["CVV"]
        self.waitForElementToBeHittable(securityCodeField)

        XCTAssertFalse(elementsQuery.textFields["CVV"].exists)
    }
}

class BraintreeDropIn_CardholderNameNotAvailable_UITests: XCTestCase {
    
    var app: XCUIApplication!
    
    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-ThreeDSecureDefault")
        app.launch()
        sleep(1)
        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()
    }
    
    func testDropIn_cardholderNameNotAvailable_fieldDoesntExist() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()
        
        let elementsQuery = app.scrollViews.otherElements
        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")
        
        self.waitForElementToBeHittable(app.staticTexts[Date.getNextYear()])
        
        let cardholderNameField = elementsQuery.textFields["Cardholder Name"]
        XCTAssertFalse(cardholderNameField.exists)
    }
}

class BraintreeDropIn_CardholderNameAvailable_UITests: XCTestCase {
    
    var app: XCUIApplication!
    
    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-ThreeDSecureDefault")
        app.launchArguments.append("-CardholderNameAccepted")
        app.launch()
        sleep(1)
        
        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()
        
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()
    }
    
    func testDropIn_cardholderNameAvailable_fieldExists() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")
        
        let cardholderNameField = elementsQuery.textFields["Cardholder Name"]
        self.waitForElementToAppear(cardholderNameField)
        XCTAssertTrue(cardholderNameField.exists)
    }
    
    func testDropIn_cardholderNameAvailable_canAddCardWithoutName() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")
        
        let cardholderNameTextField = elementsQuery.textFields["Cardholder Name"]
        cardholderNameTextField.typeText("\n")
        
        self.waitForElementToBeHittable(app.staticTexts[Date.getNextYear()])
        app.staticTexts["11"].forceTapElement()
        app.staticTexts[Date.getNextYear()].forceTapElement()
        
        let securityCodeField = elementsQuery.textFields["CVV"]
        self.waitForElementToBeHittable(securityCodeField)
        securityCodeField.forceTapElement()
        securityCodeField.typeText("123")
        
        let postalCodeField = elementsQuery.textFields["12345"]
        self.waitForElementToBeHittable(postalCodeField)
        postalCodeField.forceTapElement()
        postalCodeField.typeText("12345")
        
        app.buttons["Add Card"].forceTapElement()
        
        self.waitForElementToAppear(app.staticTexts["ending in 11"])
        
        XCTAssertTrue(app.staticTexts["ending in 11"].exists);
        
    }
}

class BraintreeDropIn_CardholderNameRequired_UITests: XCTestCase {
    
    var app: XCUIApplication!
    
    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-ThreeDSecureDefault")
        app.launchArguments.append("-CardholderNameRequired")
        app.launch()
        sleep(1)

        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()

        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()
    }
    
    func testDropIn_cardholderNameRequired_fieldExists() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        let cardholderNameField = elementsQuery.textFields["Cardholder Name"]
        self.waitForElementToAppear(cardholderNameField)

        XCTAssertTrue(cardholderNameField.exists)
    }
    
    func testDropIn_cardholderNameRequired_cannotAddCardWithoutName() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        let cardholderNameTextField = elementsQuery.textFields["Cardholder Name"]
        cardholderNameTextField.typeText("\n")

        self.waitForElementToBeHittable(app.staticTexts[Date.getNextYear()])
        app.staticTexts["11"].forceTapElement()
        app.staticTexts[Date.getNextYear()].forceTapElement()

        let securityCodeField = elementsQuery.textFields["CVV"]
        self.waitForElementToBeHittable(securityCodeField)
        securityCodeField.forceTapElement()
        securityCodeField.typeText("123")

        let postalCodeField = elementsQuery.textFields["12345"]
        self.waitForElementToBeHittable(postalCodeField)
        postalCodeField.forceTapElement()
        postalCodeField.typeText("12345")

        XCTAssertFalse(app.buttons["Add Card"].isEnabled)
    }
    
    func testDropIn_cardholderNameRequired_canAddCardWithName() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        let cardholderNameField = elementsQuery.textFields["Cardholder Name"]
        self.waitForElementToBeHittable(cardholderNameField)
        cardholderNameField.typeText("First Last\n")

        self.waitForElementToBeHittable(app.staticTexts[Date.getNextYear()])
        app.staticTexts["11"].forceTapElement()
        app.staticTexts[Date.getNextYear()].forceTapElement()

        let securityCodeField = elementsQuery.textFields["CVV"]
        self.waitForElementToBeHittable(securityCodeField)
        securityCodeField.forceTapElement()
        securityCodeField.typeText("123")

        let postalCodeField = elementsQuery.textFields["12345"]
        self.waitForElementToBeHittable(postalCodeField)
        postalCodeField.forceTapElement()
        postalCodeField.typeText("12345")

        app.buttons["Add Card"].forceTapElement()

        self.waitForElementToAppear(app.staticTexts["ending in 11"])

        XCTAssertTrue(app.staticTexts["ending in 11"].exists);
    }
}

class BraintreeDropIn_BillingAddressNotRequired_UITests: XCTestCase {

    var app: XCUIApplication!

    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-ThreeDSecureDefault")
        app.launchArguments.append("-Integration:BraintreeDemoDropInViewController")
        app.launch()
        sleep(1)
        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()
    }

    func testDropIn_billingAddressNotRequired_fieldsDontExist() {
        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()

        let elementsQuery = app.scrollViews.otherElements
        let cardNumberTextField = elementsQuery.textFields["Card Number"]

        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        let streetAddressField = elementsQuery.textFields["Street Address"]
        let extendedAddressField = elementsQuery.textFields["Extended Address"]
        let regionField = elementsQuery.textFields["State"]
        let localityField = elementsQuery.textFields["City"]
        let countryCodeField = elementsQuery.textFields["Country"]

        XCTAssertFalse(streetAddressField.exists)
        XCTAssertFalse(extendedAddressField.exists)
        XCTAssertFalse(regionField.exists)
        XCTAssertFalse(localityField.exists)
        XCTAssertFalse(countryCodeField.exists)
    }
}

class BraintreeDropIn_BillingAddressRequired_UITests: XCTestCase {

    var app: XCUIApplication!

    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments.append("-EnvironmentSandbox")
        app.launchArguments.append("-TokenizationKey")
        app.launchArguments.append("-ThreeDSecureDefault")
        app.launchArguments.append("-Integration:BraintreeDemoDropInViewController")
        app.launchArguments.append("-BillingAddressRequired")
        app.launch()
        sleep(1)

        self.waitForElementToBeHittable(app.buttons["Add Payment Method"])
        app.buttons["Add Payment Method"].tap()

        self.waitForElementToBeHittable(app.staticTexts["Credit or Debit Card"])
        app.staticTexts["Credit or Debit Card"].tap()
    }

    func testDropIn_billingAddressFieldsRequired_fieldsExists() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        let streetAddressField = elementsQuery.textFields["Street Address"]
        let extendedAddressField = elementsQuery.textFields["Extended Address"]
        let regionField = elementsQuery.textFields["State"]
        let localityField = elementsQuery.textFields["City"]
        let countryField = elementsQuery.textFields["Country"]
        let postalCodeField = elementsQuery.textFields["Postal Code"]

        self.waitForElementToAppear(streetAddressField)
        self.waitForElementToAppear(extendedAddressField)
        self.waitForElementToAppear(regionField)
        self.waitForElementToAppear(localityField)
        self.waitForElementToAppear(countryField)
        self.waitForElementToAppear(postalCodeField)

        XCTAssertTrue(streetAddressField.exists)
        XCTAssertTrue(extendedAddressField.exists)
        XCTAssertTrue(regionField.exists)
        XCTAssertTrue(localityField.exists)
        XCTAssertTrue(countryField.exists)
        XCTAssertTrue(postalCodeField.exists)
    }

    func testDropIn_billingAddressRequired_cannotAddCardWithoutAllFieldsComplete() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        self.waitForElementToBeHittable(app.staticTexts["2019"])
        app.staticTexts["01"].forceTapElement()
        app.staticTexts["2022"].forceTapElement()

        let securityCodeField = elementsQuery.textFields["CVV"]
        self.waitForElementToBeHittable(securityCodeField)
        securityCodeField.forceTapElement()
        securityCodeField.typeText("123")

        let streetAddressField = elementsQuery.textFields["Street Address"]
        self.waitForElementToBeHittable(streetAddressField)
        streetAddressField.forceTapElement()
        streetAddressField.typeText("\n")

        let extendedAddressField = elementsQuery.textFields["Extended Address"]
        self.waitForElementToBeHittable(extendedAddressField)
        extendedAddressField.forceTapElement()
        extendedAddressField.typeText("\n")

        let localityField = elementsQuery.textFields["City"]
        self.waitForElementToBeHittable(localityField)
        localityField.forceTapElement()
        localityField.typeText("\n")

        let regionField = elementsQuery.textFields["State"]
        self.waitForElementToBeHittable(regionField)
        regionField.forceTapElement()
        regionField.typeText("\n")

        let postalCodeField = elementsQuery.textFields["Postal Code"]
        self.waitForElementToBeHittable(postalCodeField)
        postalCodeField.forceTapElement()
        postalCodeField.typeText("\n")

        let countryCodeField = elementsQuery.textFields["Country"]
        self.waitForElementToBeHittable(countryCodeField)
        countryCodeField.forceTapElement()
        countryCodeField.typeText("\n")

        XCTAssertFalse(app.buttons["Add Card"].isEnabled)
    }

    func testDropIn_billingAddressRequired_canAddCardWithAllFieldsComplete() {
        let elementsQuery = app.scrollViews.otherElements

        let cardNumberTextField = elementsQuery.textFields["Card Number"]
        self.waitForElementToBeHittable(cardNumberTextField)
        cardNumberTextField.typeText("4111111111111111")

        self.waitForElementToBeHittable(app.staticTexts["2019"])
        app.staticTexts["01"].forceTapElement()
        app.staticTexts["2022"].forceTapElement()

        let securityCodeField = elementsQuery.textFields["CVV"]
